--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "axios": "^1.7.2",
-    "framer-motion": "^11.3.19",
+    "axios": "^1.7.3",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.3.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.0",
     "socket.io-client": "^4.7.5",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
