--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.3",
+    "compression": "^1.7.4",
+    "cookie": "^0.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
+    "parser": "^0.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
