--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.7.4",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
@@ -30,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.26.0",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
