--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.26.0",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
+    "webfontloader": "^1.6.28",
     "yup": "^1.4.0"
   },
   "devDependencies": {
