non working chat

--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@cloudinary/url-gen": "^1.20.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@ffmpeg/core": "^0.12.6",
+    "@ffmpeg/ffmpeg": "^0.11.0",
+    "@ffmpeg/util": "^0.12.1",
     "axios": "^1.7.3",
     "compression": "^1.7.4",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "ffmpeg-static": "^5.2.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
     "geolib": "^3.3.4",
