--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cloudinary/url-gen": "^1.20.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.11.6",
     "@ffmpeg/util": "^0.12.1",
@@ -26,6 +27,7 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
     "geolib": "^3.3.4",
@@ -40,6 +42,7 @@
     "react-router-dom": "^6.26.0",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
+    "uuid": "^10.0.0",
     "webfontloader": "^1.6.28",
     "yup": "^1.4.0"
   },
