--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "react-router-dom": "^6.26.0",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
+    "three": "^0.167.1",
     "uuid": "^10.0.0",
     "webfontloader": "^1.6.28",
+    "webgl-fluid": "^0.3.8",
     "yup": "^1.4.0"
   },
   "devDependencies": {
