--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=http://localhost:4000
-VITE_FACE_VERIFICATION_SERVICE_URL=https://face-detection-java-script-one.vercel.app
+VITE_FACE_VERIFICATION_SERVICE_URL=http://localhost:3001
