--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vite", 
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -33,6 +33,8 @@
     "framer-motion": "^11.3.21",
     "geolib": "^3.3.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide": "^0.429.0",
+    "lucide-react": "^0.429.0",
     "mongoose": "^8.5.2",
     "parser": "^0.1.4",
     "prop-types": "^15.8.1",
