--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.26.0",
+    "recordrtc": "^5.6.2",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
     "three": "^0.167.1",
