converting into mob app

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.11.6",
     "@ffmpeg/util": "^0.12.1",
+    "@ionic/react": "^8.2.7",
+    "@ionic/react-router": "^8.2.7",
     "axios": "^1.7.3",
     "browser-image-resizer": "^2.4.1",
     "compression": "^1.7.4",
@@ -43,7 +45,7 @@
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^5.3.4",
     "recordrtc": "^5.6.2",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
